plugin_LTLIBRARIES = libgstpythonplugin.la

libgstpythonplugin_la_SOURCES = gstpythonplugin.c 
libgstpythonplugin_la_LDFLAGS = 
libgstpythonplugin_la_LIBADD =  $(PYTHON_LIBS) $(PYGOBJECT_LIBS) $(GST_LIBS)
libgstpythonplugin_la_CFLAGS = $(GST_CFLAGS) $(PYGOBJECT_CFLAGS) $(GST_PLUGINS_BASE_CFLAGS) $(PYTHON_INCLUDES)
